--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,6 @@
-# These individuals contributed to the hbnb project in this repository 
+# These individuals contributed to the hbnb project in this repository
+Siphesihle Mhlongo <sphesihlemhlongo07@gmail.com>
+Nondzameko Mhlekwa <nzamiey.com@gmail.com>
 
 Ezra Nobrega <ezra.nobrega@outlook.com>
 Justin Majetich <justinmajetich@gmail.com>
